--- a/css/agency.css
+++ b/css/agency.css
@@ -68,6 +68,10 @@ h6 {
   color: #9C3E3E;
 }
 
+#livestreamdiv {
+  padding: 0;
+}
+
 .page-section h3.section-subheading {
   font-size: 16px;
   font-weight: 400;
@@ -80,13 +84,16 @@ h6 {
 .live {
   background-color: #74C7B0;
   color: #FFF;
-  padding-top: 200px;
+  padding-top: 50px;
 }
 
 .col-live {
   padding-right: 50px;
 }
 
+#watchlive {
+  color: #9C3E3E;
+}
 
 /*added*/
 
@@ -660,9 +667,13 @@ header.masthead .intro-text .intro-heading {
   }
 
   .team-member img {
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   border: 5px solid rgba(0, 0, 0, 0.1);
+  }
+
+  .team-member {
+    margin: 1em;
   }
 
 }
